--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
           <div class="input-fields">
             <input type="text" class="input" placeholder="Name" name="your-name">
             <input type="text" class="input" placeholder="Phone" name="your-number">
-            <input type="text" class="input" placeholder="Email Address" naeme="your-email">
+            <input type="text" class="input" placeholder="Email Address" name="your-email">
             <input type="text" class="input" placeholder="Message" name="message"><br>
             <input type="submit" class="btn" value="send">
              
